--- a/index.html
+++ b/index.html
@@ -22,24 +22,24 @@
             <h2>Моя біографія</h2>
             <p>Мене звати Володимир, мені 14 років, і цього літа мені виповниться 15. Я навчаюся у школі, добре ставлюся до навчання, хоча більше подобаються практичні предмети — фізкультура та трудове навчання.</p>
             <p>Цього року я побував у таборі "Шурави" разом із тренером з карате та своєю спортивною групою. Ми тренувалися, грали в ігри, жили в наметах і насолоджувалися природою.</p>
-            <p class="image-1">
+            <p class="gallery">
             <img src="https://learn.logikaschool.com/uploads/student/4926024/6831bb2c45764.jpg" width="250px" height="250px">
             <img src="https://learn.logikaschool.com/uploads/student/4926024/6831bb9a81c01.jpg" width="250px" height="250px">
             </p>
             <p>Також я мав можливість побувати в Києві з мамою. Вона була у відрядженні, а я працював на заводі з виробництва шкіри. Це був цікавий досвід: я побачив, як працює виробництво, і навчився деяким новим речам.</p>
-            <p class="image-2">
+            <p class="gallery">
             <img src="https://learn.logikaschool.com/uploads/student/4926024/683adddef175d.jpg" width="200px" height="250px">
             </p>
-            <p>Ми гуляли з мамою по Борисполю — це було затишно й приємно.</p>
-            <p class="image-3">
+            <p>Ми гуляли з мамою по парку-готелю KIDEV, він розташований у Борисполі— це було затишно й приємно.</p>
+            <p class="gallery">
             <img src="https://learn.logikaschool.com/uploads/student/4926024/683ae43dbd316.jpg" width="200px" height="300px">
             </p>
-            <p>Це я в номері на балконі.</p>
-            <p class="image-4">
+            <p>Це я вечерю на такій терасі все здається ще смачніше.</p>
+            <p class="gallery">
             <img src="https://learn.logikaschool.com/uploads/student/4926024/683ae77f32fa3.jpg" width="200px" height="300px" alt="Фото з балкону">
             </p>
-            <p>Це ми з мамою на потязі їдимо в Київ</p>
-            <p class="image-5">
+            <p>Це ми з мамою на потязі їдимо в Київ. Одразу видно що ми любителі лого NIKE</p>
+            <p class="gallery">
             <img src="https://learn.logikaschool.com/uploads/student/4926024/683aefec3f5a8.jpg"width="200px" height="250px">
             </p>
         </section>
@@ -48,15 +48,19 @@
         <section class="info" id="hobbies">
             <h2>Мої захоплення</h2>
             <p>Я займаюся плаванням вже 5 років. Це моє головне хобі та спорт, який допомагає мені бути сильнішим, витривалішим і дисциплінованим. Я беру участь у змаганнях, де отримав вже п’ять медалей та багато грамот. Це дає мені мотивацію тренуватись ще більше.</p>
+            <p class="gallery">
             <img src="https://learn.logikaschool.com/uploads/student/4926024/6831a62662ac9.jpg" width="200px" height="250px">
             <img src="https://learn.logikaschool.com/uploads/student/4926024/6831a6d4395c6.jpg" width="200px" height="250px">
             <img src="https://learn.logikaschool.com/uploads/student/4926024/6831a879a91a9.jpg" width="200px" height="250px">
+            </p>
             <p>Окрім плавання, я люблю кататися на велосипеді. Іноді ми з друзями влаштовуємо поїздки по місту або виїжджаємо на природу — це дає відчуття свободи.</p>
-            <p class="image-5">
+            <p class="gallery">
             <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcS1HOYIofPzLmSQkAXTv-BRQW77A4Sj3v6JQg&s" width="300px" height="200px">
             </p>
-            <p>Ще одне моє велике захоплення — це подорожі. Мені подобається дізнаватися щось нове про інші міста та країни. Одного разу я побував у Чорногорії, на Голубій лагуні — це було неймовірно красиво! Я мрію побачити ще багато країн у майбутньому.</p>
+            <p>Ще одне моє велике захоплення — це подорожі. Мені подобається дізнаватися щось нове про інші міста та країни. Одного разу я побував у Чорногорії — це було неймовірно красиво! Я мрію побачити ще багато країн у майбутньому.</p>
+            <p class="gallery">
             <img src="https://learn.logikaschool.com/uploads/student/4926024/6831ae9553407.jpg" width="200px" height="250px">
+            </p>
         </section>
 
         <!-- Музика -->
@@ -71,7 +75,7 @@
 
     <footer>
         <div class="footer-info" id="contacts">
-            <h4>Контакти</h4>
+            <h4 class="con">Контакти</h4>
             <p>Телефон: 098-841-27-33</p>
             <p>Місто: Одеса</p>
             <p>Адреса: вул. Івана Франка 41</p>
